--- a/in_good_hands/templates/register.html
+++ b/in_good_hands/templates/register.html
@@ -3,7 +3,7 @@
 
     <section class="login-page">
       <h2>Załóż konto</h2>
-      <form>
+      <form method="post">
         <div class="form-group">
           <input type="text" name="name" placeholder="Imię" />
         </div>
@@ -19,6 +19,7 @@
         <div class="form-group">
           <input type="password" name="password2" placeholder="Powtórz hasło" />
         </div>
+          {{ message }}
 
         <div class="form-group form-group--buttons">
           <a href="login.html" class="btn btn--without-border">Zaloguj się</a>
